petición "ajax" para recoger los resultados en formato json

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,6 +21,9 @@ div{
     margin-top: 10px;
     font-size: 90px;
 }
+#cabecera div img {
+    max-height: 100px;
+}
 .azulito{
     background-color: aliceblue;
     border: 2px solid black;
