--- a/css/estilos.css
+++ b/css/estilos.css
@@ -92,7 +92,7 @@ Botones partidos en resultados
     margin-top: 0px;
 }
 
-#part-DL img{
+#part-Jpc img, #part-NAplus img{
     height: 40px;
     width: 50px;
 }
