--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@ body{
 div{
     margin: 0px;
     overflow: hidden;
-    height: 300px;
+    height: 400px;
     display: block;
 
 }
@@ -92,7 +92,7 @@ Botones partidos en resultados
     margin-top: 0px;
 }
 
-#part-Jpc img, #part-NAplus img{
+#part-Jpc img, #part-NAplus img, #part-Cup img, #part-MasPais img, #part-BNG img, #part-TeruelExiste img, #part-CPM img{
     height: 40px;
     width: 50px;
 }
